# lemon-gb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yaml
src/: enums.rs  game_boy.rs  gui.rs  hardware.rs  instructions.rs  main.rs  tests.rs
src/enums/: interrupts.rs  jump_condition.rs  parameter_groups.rs  register_8.rs
src/game_boy/: components.rs  save_state.rs
src/game_boy/components/: cartridge.rs  cpu.rs  mmu.rs  ppu.rs  timer.rs
src/game_boy/components/cartridge/: header.rs  types.rs
src/game_boy/components/cpu/: builder.rs  registers.rs
src/game_boy/components/cpu/registers/: builder.rs  flags_register.rs
src/game_boy/components/mmu/: builder.rs  mbc.rs  save_state.rs
src/game_boy/components/mmu/mbc/: mbc1.rs
src/game_boy/components/ppu/: background_palette.rs  lcd_control.rs  lcd_status.rs  mode.rs
src/hardware/: cpu.rs  registers.rs
src/hardware/cpu/: builder.rs  memory_bus.rs
src/hardware/registers/: builder.rs  flags_register.rs
src/helpers/: bit_operations.rs
src/tests/: hardware.rs  test_cpu_registers.rs  test_halt.rs  test_instructions.rs  test_interrupts.rs  test_mbc.rs  test_roms.rs  test_save_load.rs  test_timer.rs
src/tests/hardware/: test_cpu.rs  test_registers.rs
src/tests/hardware/test_cpu/: test_instructions.rs
src/tests/test_roms/: test_cpu_instrs.rs  test_instr_timing.rs
