[package]
name = "lemon-gb"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rstest = "0.24.0"

[dependencies]
bincode = "1.3.3"
log = { version = "0.4.26", features = ["release_max_level_off"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
env_logger = "0.11.6"
pixels = "0.15.0"
winit = "0.30.9"
winit_input_helper = "0.16.0"
